fix squished render bug on did mount

--- a/src/index.scss
+++ b/src/index.scss
@@ -21,5 +21,6 @@ a {
 }
 
 h3 {
+    padding-top: 30px;
   color: #0a0a0a;
 }
